[package]
name = "rs-crypto"
version = "0.0.1-alpha.2"
edition = "2021"
authors = ["yangxu52"]
description = "WASM bindings for rs-crypto"
repository = "https://github.com/yangxu52/rs-crypto"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2"
rsa = "0.9.6"
rand = "0.8.5"
base64 = "0.22.1"
