[package]
name = "rs-crypto"
version = "0.0.1-beta.1"
edition = "2021"
authors = ["yangxu52"]
description = "A simple crypto library, based on Rust and WebAssembly."
repository = "https://github.com/yangxu52/rs-crypto"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2"
rand = "0.8.5"
base64 = "0.22.1"
rsa = "0.9.6"
sha2 = "0.10.8"
